# gssa-rs

./: .gitignore  Cargo.toml  Makefile  Readme.md  rustfmt.toml  thumbv4-none-agb.json
docs/: Affine-Map-API.md  GBATEK-Lokathor-edit.html  ObjectApi.md  Unique-tileset-ids.md  weird-behavior.md
gbassets/: Cargo.toml
gbassets/src/: lib.rs
haldvance/: Cargo.toml
haldvance/src/: bitset.rs  block.rs  exec.rs  input.rs  lib.rs  log.rs  log_doc_arguments.md  planckrand.rs  runtime_asserts.rs  runtime_asserts_doc_arguments.md  runtime_asserts_doc_start.md  sane_assert.rs  unique_id.rs  video.rs
haldvance/src/video/: colmod.rs  mode.rs  object.rs  palette.rs  structs.rs  tile.rs
haldvance/src/video/object/: sprite.rs
haldvance/src/video/tile/: cbb.rs  drawable.rs  layer.rs  map.rs  sbb.rs  set.rs
haldvance/src/video/tile/layer/: affine.rs  text.rs
haldvance_block/: Cargo.toml
haldvance_block/src/: lib.rs
haldvance_utils/: Cargo.toml
haldvance_utils/src/: bitset.rs  block.rs  lib.rs
include_const_aligned/: Cargo.toml  README.md
include_const_aligned/src/: lib.rs
src/: assets.rs  collide.rs  game.rs  main.rs  mainmenu.rs  runtime_asserts.rs  text.rs  textdraw.rs  textlayout.rs  video_control.rs  volmatrix.rs
src/game/: background.rs  blink.rs  cursor.rs  mainmenu.rs  posi.rs  ship.rs  space.rs  state.rs
src/game/mainmenu/: cycle.rs
src/game/space/: background.rs  bullet.rs  enemy.rs  items.rs
src/text/: draw.rs  layout.rs  palette.rs
volmatrix/: Cargo.toml
volmatrix/src/: lib.rs  volmatrix.rs  volmemcopy.rs
