[package]
name = "gssa-rust"
version = "0.1.0"
authors = ["Nicola Papale"]
edition = "2021"
exclude = ["resources"]


[features]
default = ["runtime_asserts"]
runtime_asserts = []

[dependencies]
# NOTE: renamed to use hal::*; in source code
hal = { version = "0.4", package = "haldvance", path = "haldvance" }
assets = { version = "0.1", package = "gbassets", path = "gbassets" }
const-default = { version = "1.0", default-features = false, features = ["derive"] }

[workspace]
members = ["haldvance", "volmatrix", "gbassets"]

[profile.release]
lto = true
panic = "abort"
incremental = false
codegen-units = 1
