[package]
name = "haldvance"
description = "An advanced Rust abstraction layer for an Advanced Game Boy"
version = "0.4.0"
authors = ["Nicola Papale"]
edition = "2021"
license = "Zlib OR Apache-2.0"
keywords = ["gba"]

[features]
default = []
log = []

[dependencies]
gba = { version = "0.5.3", git = "https://github.com/nicopap/gba.git", branch = "text-bg-entry" }
const-default = { version = "1.0", default-features = false, features = ["derive"] }
include_const_aligned = { version = "0.4.0", path = "../include_const_aligned" }
volmatrix = { version = "0.4", features = ["nightly"], path = "../volmatrix" }
