[package]
name = "haldvance_block"
description = "A simple block allocation algorithm for the haldvance crate"
version = "0.4.0"
authors = ["Nicola Papale"]
edition = "2021"
license = "Zlib OR Apache-2.0"
keywords = ["gba"]

[features]
default = []
test = ["arrayvec/std"]

[dependencies]
arrayvec = {version = "0.7", default-features = false }
